fix main content block spacing

--- a/themes/twenty/static/css/style.css
+++ b/themes/twenty/static/css/style.css
@@ -1098,7 +1098,7 @@
 		top: 1.5em;
 	}
 
-	#main {
+	#main.after-banner {
 		padding: 4em 0;
 	}
 
